Increased font size to form input to prevent zoom on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -527,6 +527,7 @@ i[class*="van-type-"] {
   font-family: "Inter", sans-serif;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   font-weight: 400;
+  font-size: 16px;
 }
 
 .login-form > input:focus {
